--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: hchouhan # Your GitHub organization or username, where this repository li
 repo: uptime # The name of this repository
 
 sites:
-  - name: Webtions
+  - name: Webtions.com
     url: https://webtions.com
   - name: Harish Chouhan
     url: https://harishchouhan.com
