--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,8 @@ sites:
     url: https://webtions.com
   - name: Harish Chouhan
     url: https://harishchouhan.com
+  - name: FlatTrendz
+    url: https://flattrendz.com
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
